platform/kubernetes/base/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: shopsphere-platform
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/component: event-broker
  ports:
    - name: internal
      port: 9092
      targetPort: internal
    - name: controller
      port: 9093
      targetPort: controller
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: shopsphere-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/component: event-broker
  ports:
    - name: kafka
      port: 9092
      targetPort: internal
      protocol: TCP
